src/objects/CM_SPL_Addr__c.object
<CustomObject>
    <description>Service &amp; Payee Location Address Object based on PFIN Number</description>
    <fields>
        <fullName>Address_Effective_Date__c</fullName>
        <description>Added this field part of PPN-28420 to capture address effective date of the corresponding PFIN coming from PPW.</description>
        <label>Address Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_End_Date__c</fullName>
        <description>Added this field part of PPN-28420 to capture address effective end date of the corresponding PFIN coming from PPW.</description>
        <label>Address End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_PFIN__c</fullName>
        <description>Part of 40kpfin user stories.</description>
        <label>Bill PFIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Address__c</fullName>
        <formula>CM_SPL_Addr_Line_1__c +&apos; &apos;+ CM_SPL_Add_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Medicaid_Provider_Number__c</fullName>
        <label>Medicaid Provider Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_NPI__c</fullName>
        <label>NPI Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_SPL_Medicare_Number__c</fullName>
        <label>Medicare Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_Corporate_Entity_Code__c</fullName>
        <label>Corporate Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_County__c</fullName>
        <description>County</description>
        <inlineHelpText>County</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Directory_Exclusion_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Exclusion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_Directory_Location_Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_End_Date__c</fullName>
        <description>PPN-16594: End Date field on Service and Payee location</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_SPA_Tax_ID__c</fullName>
        <description>Formula field to expose the tax id in the search layouts</description>
        <formula>CM_SPL_Prov_Tax_ID__r.CM_PTI_Tax_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Add_Line_2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Address Line 2</inlineHelpText>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Addr_Line_1__c</fullName>
        <description>Address Line 1</description>
        <inlineHelpText>Address Line 1</inlineHelpText>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Addr_Type__c</fullName>
        <description>Provider Address Usage Type</description>
        <inlineHelpText>Provider Address Usage Type</inlineHelpText>
        <label>Address Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Capitation</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Directory</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_SPL_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_SPL_Eff_Date__c</fullName>
        <description>Effective Date</description>
        <inlineHelpText>Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Fax_No__c</fullName>
        <label>Fax Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Mobile_No__c</fullName>
        <description>Mobile Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_PFIN_No__c</fullName>
        <label>PFIN Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_PFIN_Reason__c</fullName>
        <description>PFIN Status Reason</description>
        <inlineHelpText>PFIN Status Reason</inlineHelpText>
        <label>PFIN Status Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Prov_Tax_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Tax Identification</label>
        <referenceTo>CM_Provider_Tax_Id__c</referenceTo>
        <relationshipLabel>Service &amp; Payee Location Address</relationshipLabel>
        <relationshipName>Service_Payee_Location_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Prov__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service &amp; Payee Location Address</relationshipLabel>
        <relationshipName>Account_Tax_Addresses_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Sequence_Num__c</fullName>
        <description>This is added for updating the address based on sequence number which is being currently maintained in PPW</description>
        <label>CM_SPL_Sequence_Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_SPL_Serv_Tax_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service &amp; Payee Location Address</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Service &amp; Payee Location Address (Service &amp; Payee Location Address)</relationshipLabel>
        <relationshipName>Service_Payee_Location_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_SPL_State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_SPL_Zip_CD__c</fullName>
        <description>Zip Code</description>
        <inlineHelpText>Zip Code</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Status__c</fullName>
        <description>PPN-16594: Status field on Service and Payee location</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Name__c</fullName>
        <label>Override Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFIN_Designations__c</fullName>
        <label>PFIN Designations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PFIN_Type__c</fullName>
        <label>PFIN Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prov_Id__c</fullName>
        <formula>CM_SPL_Prov__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov Id</label>
        <type>Text</type>
    </fields>
    <label>Service &amp; Payee Location Address</label>
    <nameField>
        <displayFormat>PA-{0}</displayFormat>
        <label>Address Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service &amp; Payee Location Address</pluralLabel>
    <recordTypes>
        <fullName>Directory_Location</fullName>
        <active>true</active>
        <label>Directory Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_and_Payee_Location</fullName>
        <active>true</active>
        <label>Service and Payee Location</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>